# software

./: .gitignore  .graphifyignore  CLAUDE.md  Pipfile  README.md  pyproject.toml  requirements.txt  software.bio.txt  softwarelist.tsv
.claude/agents/: ansible-singularity-deployer.md
ansible/: .ansible-lint  ansible.cfg  astro.yaml  bio.yaml  inventory  site.yaml
ansible/files/: rstudio_auth.sh
ansible/group_vars/: all
ansible/roles/all/: README.md
ansible/roles/all/tasks/: main.yml
ansible/roles/astro/defaults/: main.yml
ansible/roles/astro/tasks/: main.yml
ansible/roles/astro/vars/: main.yml
ansible/roles/bio/defaults/: main.yml
ansible/roles/bio/tasks/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/common/templates/: mpi.lua
ansible/roles/compiled/: README.md
ansible/roles/compiled/defaults/: main.yml
ansible/roles/compiled/files/: .gitignore  nextflow.config
ansible/roles/compiled/files/uv/bio/dram/1.5.0/: pyproject.toml
ansible/roles/compiled/files/uv/bio/tbprofiler/6.6.5/: pyproject.toml
ansible/roles/compiled/handlers/: main.yml
ansible/roles/compiled/tasks/: GenomeStrip.yaml  PRSice-2.yaml  R.yaml  anaconda.yaml  apache_hadoop.yaml  bwa.yaml  (+84 more)
ansible/roles/containers/: README.md
astro/casa/: 5.7.0.lua  5.7.2-4.lua  5.8.0.lua  6.1.0-118-monolithic.lua  6.1.2.7-modular.lua  6.1.2.7-pipeline.lua  6.2.lua  6.3.lua  6.4.3.lua  6.4.4.lua  6.4.lua  6.5.0.lua  6.5.5.lua  6.6.0.lua
astro/pulsar/_build_scripts/: atnfcat.build  build_all.build  calceph-2.3.2.build  cfitsio-3.450.build  common.build  common.build.gcc-11.3.0  common.build.gcc-9.2.0  common.lua.gcc-11.3.0  common.lua.gcc-9.2.0  dedisp.build  dspsr.build  fftw-3.3.8-DP.build  fftw-3.3.8-SP.build  meerpipe.build  nextflow.build  pgplot.build  polychord.build  presto.build  psr_cfitsio-3.450.build  psrcat.build  psrchive.build  psrdada.build  psrfits_utils.build  psrxml.build  pyslalib.build  qd.build  readme.md  sigproc.build  sigpyproc.build  sofa.build  splinter.build  tempo.build  tempo2_temponest_aparthas.build  temponest_aparthas.build
astro/pybdsf/: 1.10.1.lua  1.9.2.lua
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_files_1.txt  .graphify_chunk_files_2.txt  .graphify_chunk_files_3.txt  .graphify_chunk_files_4.txt  .graphify_chunk_files_5.txt  .graphify_chunk_files_6.txt  .graphify_chunk_files_7.txt  .graphify_chunk_files_8.txt  .graphify_chunk_files_9.txt  .graphify_detect.json  .graphify_labels.json  .graphify_python  .graphify_root  .graphify_uncached.txt  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
(+565 files in other folders)
