[project]
name = "dram"
version = "1.5.0"
description = "Distilled and Refined Annotation of Metabolism"
requires-python = ">=3.11,<3.12"
dependencies = [
    "dram-bio>=1.5.0",
    "pandas>=1.3.0",
    "networkx>=2.6",
    "scikit-bio>=0.5.6",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "openpyxl>=3.0.0",
    "altair>=4.2.0",
    "sqlalchemy>=1.4.0",
]