[project]
name = "tbprofiler-ilifu"
version = "6.6.5"
description = "TBProfiler for M. tuberculosis profiling and drug resistance analysis"
requires-python = ">=3.11,<3.13"
dependencies = [
    "joblib>=1.5.2",
    "pathogen-profiler",
    "pysam>=0.23.3",
    "tbprofiler",
    "tqdm>=4.32.2",
]

[tool.uv.sources]
tbprofiler = { git = "https://github.com/jodyphelan/TBProfiler.git" }
pathogen-profiler = { git = "https://github.com/jodyphelan/pathogen-profiler.git" }
